--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -74,6 +74,8 @@
         </button>
         or
         <a href="/movies">Cancel</a>
+        or
+        <a href="/directors/new">New Director</a>
       </form>
     </div>
   </div>
