--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -17,6 +17,12 @@
       <dt>Image url</dt>
       <dd><%= @actor.image_url %></dd>
 
+      <!-- <dt>Number Characters</dt>
+      <dd><%= Character.where(actor_id: @actor.id).count %></dd> -->
+
+      <dt>Number of Movies</dt>
+      <dd><%= @actor.actors.count %></dd>
+
     </dl>
 
     <div class="btn-group btn-group-justified">
@@ -32,3 +38,49 @@
     </div>
   </div>
 </div>
+
+<ul>
+<% @actor.actors.each do |movie| %>
+<li><a href="/movies/<%= movie.movies.id %>"><%= movie.movies.title %></a></li>
+<% end %>
+</ul>
+
+<form action="/create_character" method="post">
+  <!-- Hidden input for authenticity token to protect from forgery -->
+  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+  <!-- Label and input for movie_id -->
+  <div class="form-group">
+    <label for="movie_id" class="control-label">
+      Movie
+    </label>
+    <%= select_tag("movie_id", options_from_collection_for_select(Movie.all, :id, :title, @character.movie_id), :class => "form-control") %>
+  </div>
+
+  <!-- Label and input for actor_id -->
+  <div class="form-group">
+    <label for="actor_id" class="control-label">
+      Actor
+    </label>
+
+    <%= select_tag("actor_id", options_from_collection_for_select(Actor.all, :id, :name, @character.actor_id), :class => "form-control") %>
+
+  </div>
+
+  <!-- Label and input for name -->
+  <div class="form-group">
+    <label for="name" class="control-label">
+      Name
+    </label>
+
+    <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @character.name %>">
+  </div>
+
+  <input type="hidden" name="actor_id" value="<%= @actor.id %>">
+
+  <button class="btn btn-success">
+    Create Character
+  </button>
+  or
+  <a href="/characters">Cancel</a>
+</form>
