--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -17,8 +17,11 @@
       <dt>Image url</dt>
       <dd><%= @director.image_url %></dd>
 
+      <!-- <dt>Number of films directed</dt>
+      <dd><%= Movie.where(:director_id => @director.id).count %></dd> -->
+
       <dt>Number of films directed</dt>
-      <dd><%= Movie.where(:director_id => @director.id).count %></dd>
+      <dd><%= @director.movies.count %></dd>
 
     </dl>
 
@@ -37,7 +40,8 @@
 </div>
 
 <ul>
-  <% Movie.where(:director_id => @director.id).each do |movie|%>
+
+  <% @director.movies.each do |movie| %>
   <li><a href="/movies/<%= movie.id %>"><%= movie.title %></a></li>
   <% end %>
 </ul>
@@ -90,7 +94,6 @@
 
     <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @movie.image_url %>">
   </div>
-
 
     <input type="hidden" name="director_id" value="<%= @director.id %>">
 
