--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -12,7 +12,7 @@
 
       <dt>Movie</dt>
       <dd>
-      <%= @character.movies.title%>
+      <%= @character.movie.title%>
       </dd>
 
       <!-- <dt>Actor</dt>
